--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,10 +2,10 @@
 
 $fa-font-path: "../webfonts" !default;
 
-@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+/* @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
-@import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/brands"; */
 
 @import "~bootstrap/scss/bootstrap";
 
