--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -10,3 +10,22 @@ $fa-font-path: "../webfonts" !default;
 @import "~bootstrap/scss/bootstrap";
 
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Antonio:wght@100..700&display=swap");
+
+
+#admin {
+    height: 100vh;
+    overflow: hidden;
+    display: flex;    
+    #sidebar {
+        background-color: $black;
+    }
+    #content {
+        flex-grow: 1;
+        header {
+            .profile-picture {
+                width: 40px;
+                aspect-ratio: 1 / 1;
+            }
+        }
+    }
+}
