fix header with dropdown menu and edit profile page with right layout

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -21,6 +21,7 @@ $fa-font-path: "../webfonts" !default;
     }
     #content {
         flex-grow: 1;
+        overflow-y: scroll;
         header {
             .profile-picture {
                 width: 40px;
